--- a/tool/index.html
+++ b/tool/index.html
@@ -10,7 +10,7 @@
     /* General styles */
 
     html {
-      font-size: 62.5%;     /* Brings it to 10px, since default is usually 16px. */
+      font-size: 62.5%;     /* Brings it to 10px, since default is usually 16px. Means 1.0rem = 10px */
     }
 
     body {
@@ -38,8 +38,12 @@
     }
 
     .dot {
-      stroke-width: 0.5px;
+      stroke-width: 0.05rem;
       stroke: #000;
+    }
+
+    .dot.hovered {
+      stroke-width: 0.2rem;
     }
 
     /* Legend styles */
@@ -56,6 +60,21 @@
 
     #legend .circle-label {
       font-size: 1rem;
+    }
+
+    /* Tooltip div */
+
+    div.tooltip {
+      position: absolute;
+      text-align: left;
+      width: 20rem;
+      height: 6rem;
+      padding: 1rem;
+      font: 1.2rem sans-serif;
+      background: lightsteelblue;
+      border: 0rem;
+      border-radius: 0.8rem;
+      pointer-events: none;
     }
 
   </style>
@@ -90,6 +109,11 @@
         curQuestion1 = undefined,
         curQuestion2 = undefined,
         curResponseData = undefined;
+
+    // Define the div for the tooltip
+    var divTooltip = d3.select("body").append("div")
+        .attr("class", "tooltip")
+        .style("opacity", 0);
 
     // Create chart container group within SVG element.
     var svg = d3.select('#graph-area').append('svg')
@@ -239,7 +263,26 @@ console.log('-updateGraph -curResponseData', curResponseData)
           .attr('cx', function(d){ return xScale(d.x); })   // center-x position
           .attr('cy', function(d){ return yScale(d.y); })   // center-y position
           .style('fill', 'red')       // inject CSS directly using .style()
-          .attr('fill-opacity', 0.2); // this is an attribute, not a CSS property, but it might work in CSS too.
+          .attr('fill-opacity', 0.2) // this is an attribute, not a CSS property, but it might work in CSS too.
+          // Hover action for circles.
+          .on("mouseover", function(d) {
+            divTooltip.transition()
+              .duration(200)
+              .style("opacity", .9);
+            divTooltip
+              .html("x: " + d.x + "<br/>y: " + d.y + "<br/>count: " + d.count)
+              .style("left", (d3.event.pageX + 40) + "px")
+              .style("top", (d3.event.pageY - 28) + "px");
+            $(this)
+              .addClass('hovered');
+          })
+          .on("mouseout", function(d) {
+            divTooltip.transition()
+              .duration(500)
+              .style("opacity", 0);
+            $(this)
+              .removeClass('hovered')
+          });
 
       // Draw axes after circles, so they are layered above them.
       // Draw X axis
