--- a/tool/index.html
+++ b/tool/index.html
@@ -57,8 +57,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse" style="float:right">
           <ul class="nav navbar-nav">
-            <li style="border-bottom: 3px solid #0f7056" class="h4"><div id="save-csv"><a download="aiga_data.csv" href="" target="_blank">Save selection to CSV</a></div></li>
-            <li style="border-bottom: 3px solid #67a5cf" class="h4"><div><a href="https://github.com/sosolimited/Design-Census" target="_blank">Download code on GitHub</a></div></li>
+            <li style="border-bottom: 3px solid #478acc" class="h4"><div id="save-csv"><a download="aiga_data.csv" href="" target="_blank">Save selection to CSV</a></div></li>
+            <li style="border-bottom: 3px solid #afe7c6" class="h4"><div><a href="https://github.com/sosolimited/Design-Census" target="_blank">Download code on GitHub</a></div></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -69,7 +69,7 @@
 
 <div class="container">
   <div id="about-text">
-    <h2 style="color:#cdcfd5">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nations, there are many stories and surprises to be discovered within the data. Find a compelling combination? Download your findings to a CSV file and create a visualization of your own. </h2>
+    <h2 style="color:#cdcfd5">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
     <h2 style="color:#cdcfd5">This tool was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and the official data visualization partner of the 2016 Design Census.</h2>
   </div>
   <br/><br/>
