--- a/tool/index.html
+++ b/tool/index.html
@@ -52,7 +52,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://www.sosolimited.com/" style="float:left"><img class="large" style="max-width:129px;height:auto" src="assets/SOSOlogoVector@2x.png"><img class="small" style="max-width:50px;height:auto" src="assets/SOSOlogoVectorShort@2x.png"></a>
+          <a class="navbar-brand" href="https://www.sosolimited.com/" style="float:left"><img class="large" style="max-width:129px;height:auto" src="assets/SOSOlogoVector-yellow@2x.png"><img class="small" style="max-width:50px;height:auto" src="assets/SOSOlogoVectorShort-yellow@2x.png"></a>
           <li style="float:right; border-bottom: 3px solid #ffd849; list-style-type: none" class="h4">Design Census Data Explorer</li>
         </div>
         <div id="navbar" class="collapse navbar-collapse" style="float:right">
@@ -66,22 +66,29 @@
   </div>
 </div>
 </nav>
-
-<div class="container">
-  <div id="about-text">
-    <h2 style="color:#cdcfd5">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
-    <h2 style="color:#cdcfd5">This tool was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and the official data visualization partner of the 2016 Design Census.</h2>
-  </div>
-  <br/><br/>
-</div>
-
-<div class="container">
-  <div id="dropdowns">
-    <div class="select-style x" style="float:left">
-      <select id="data-selection-1">
-        <option selected disabled>Select question for X axis</option>
-      </select>
+<div class="allContent">
+  <div class="container">
+    <div id="error-text">
+      <h1 style="color:#FFFFFF">To access The Design Census Data Explorer, please view this page on a screen that is at least 1024px in width.</h2>
+      </div>
     </div>
+    <div class="container">
+      <div id="about-text">
+        <h2 style="color:#FFFFFF">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
+        <h2 style="color:#FFFFFF">This tool was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and the official data visualization partner of the 2016 Design Census.</h2>
+      </div>
+      <br/><br/>
+    </div>
+
+
+
+    <div class="container">
+      <div id="dropdowns">
+        <div class="select-style x" style="float:left">
+          <select id="data-selection-1">
+            <option selected disabled>Select question for X axis</option>
+          </select>
+        </div>
 <!--   <div class="x"><h2>×</h2></div>
 -->  <div class="select-style y" style="float:left">
 <select id="data-selection-2">
@@ -94,7 +101,7 @@
 <div class="container">
   <div id="graph-area"></div>
 </div>
-
+</div>
 
 
 
@@ -141,28 +148,29 @@
     //     .attr('transform', 'translate(0,' + 100 + ')');
 
     // Load CSV first to remove empty rows from it, then load JSON.
-    d3.xhr('data/wco-responses-13dec2016-2.csv').get(function (err, response) {
+    //d3.xhr('data/wco-responses-13dec2016-2.csv').get(function (err, response) {
+      d3.xhr('data/PRODUCTION-us_cleaned.csv').get(function (err, response) {
 
-      var dirtyCSV = response.responseText;
-      var cleanCSV = dirtyCSV.split('\n\r').join('');
-      var parsedCSV = d3.csv.parse(cleanCSV);
+        var dirtyCSV = response.responseText;
+        var cleanCSV = dirtyCSV.split('\n\r').join('');
+        var parsedCSV = d3.csv.parse(cleanCSV);
 
-      d3.json("data/wco-questions-13dec2016.json", function(error, json) {
-        parseData(json, parsedCSV);
+        d3.json("data/PRODUCTION-questions_cleaned.json", function(error, json) {
+          parseData(json, parsedCSV);
+        });
+
       });
 
-    });
+      function parseData(iQuestions, iResponses) {
 
-    function parseData(iQuestions, iResponses) {
+        questions = iQuestions;
+        responses = iResponses;
 
-      questions = iQuestions;
-      responses = iResponses;
-
-      var selectableQuestions = questions.filter(function(d){
-        if (d.type === "range") { return true; }
-        else if (d.type === "choice" && d.attributes.allow_multiple === false) { return true; }
-        else { return false; }
-      });
+        var selectableQuestions = questions.filter(function(d){
+          if (d.type === "range") { return true; }
+          else if (d.type === "choice" && d.attributes.allow_multiple === false) { return true; }
+          else { return false; }
+        });
 
 // debugger;
 console.log('Raw questions', questions)
@@ -595,17 +603,17 @@ _.forOwn(response, function(responseVal, question){
 
   }
 
-$(function() {
+  $(function() {
 
     var $body = $(document);
     $body.bind('scroll', function() {
         // "Disable" the horizontal scroll.
         if ($body.scrollLeft() !== 0) {
-            $body.scrollLeft(0);
+          $body.scrollLeft(0);
         }
-    });
+      });
 
-});
+  });
 
 </script>
     <!-- Bootstrap core JavaScript
