--- a/tool/index.html
+++ b/tool/index.html
@@ -53,7 +53,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="https://www.sosolimited.com/" style="float:left"><img class="large" style="max-width:129px;height:auto" src="assets/SOSOlogoVector-red@2x.png"><img class="small" style="max-width:50px;height:auto" src="assets/SOSOlogoVectorShort-red@2x.png"></a>
-          <li style="float:right; border-bottom: 3px solid #F75434; list-style-type: none" class="h4">Design Census Data Explorer</li>
+          <li style="float:right; border-bottom: 3px solid #2a2b2c; list-style-type: none" class="h4">Design Census Data Explorer</li>
         </div>
         <div id="navbar" class="collapse navbar-collapse" style="float:right">
           <ul class="nav navbar-nav">
@@ -67,28 +67,28 @@
 </div>
 </nav>
 <div class="allContent">
-<div class="container">
-  <div id="error-text">
-    <h1 style="color:#2A2B2C">To access The Design Census Data Explorer, please view this page on a screen that is at least 1024px in width.</h2>
-  </div>
-</div>
-<div class="container">
-  <div id="about-text">
-    <h2 style="color:#2A2B2C">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
-    <h2 style="color:#2A2B2C">This tool was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and the official data visualization partner of the 2016 Design Census.</h2>
-  </div>
-  <br/><br/>
-</div>
-
-
-
-<div class="container">
-  <div id="dropdowns">
-    <div class="select-style x" style="float:left">
-      <select id="data-selection-1">
-        <option selected disabled>Select question for X axis</option>
-      </select>
+  <div class="container">
+    <div id="error-text">
+      <h1 style="color:#2A2B2C">To access The Design Census Data Explorer, please view this page on a screen that is at least 1024px in width.</h2>
+      </div>
     </div>
+    <div class="container">
+      <div id="about-text">
+        <h2 style="color:#2A2B2C">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
+        <h2 style="color:#2A2B2C">This tool was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and the official data visualization partner of the 2016 Design Census.</h2>
+      </div>
+      <br/><br/>
+    </div>
+
+
+
+    <div class="container">
+      <div id="dropdowns">
+        <div class="select-style x" style="float:left">
+          <select id="data-selection-1">
+            <option selected disabled>Select question for X axis</option>
+          </select>
+        </div>
 <!--   <div class="x"><h2>×</h2></div>
 -->  <div class="select-style y" style="float:left">
 <select id="data-selection-2">
@@ -149,28 +149,28 @@
 
     // Load CSV first to remove empty rows from it, then load JSON.
     //d3.xhr('data/wco-responses-13dec2016-2.csv').get(function (err, response) {
-    d3.xhr('data/PRODUCTION-us_cleaned.csv').get(function (err, response) {
+      d3.xhr('data/PRODUCTION-us_cleaned.csv').get(function (err, response) {
 
-      var dirtyCSV = response.responseText;
-      var cleanCSV = dirtyCSV.split('\n\r').join('');
-      var parsedCSV = d3.csv.parse(cleanCSV);
+        var dirtyCSV = response.responseText;
+        var cleanCSV = dirtyCSV.split('\n\r').join('');
+        var parsedCSV = d3.csv.parse(cleanCSV);
 
-      d3.json("data/PRODUCTION-questions_cleaned.json", function(error, json) {
-        parseData(json, parsedCSV);
+        d3.json("data/PRODUCTION-questions_cleaned.json", function(error, json) {
+          parseData(json, parsedCSV);
+        });
+
       });
 
-    });
+      function parseData(iQuestions, iResponses) {
 
-    function parseData(iQuestions, iResponses) {
+        questions = iQuestions;
+        responses = iResponses;
 
-      questions = iQuestions;
-      responses = iResponses;
-
-      var selectableQuestions = questions.filter(function(d){
-        if (d.type === "range") { return true; }
-        else if (d.type === "choice" && d.attributes.allow_multiple === false) { return true; }
-        else { return false; }
-      });
+        var selectableQuestions = questions.filter(function(d){
+          if (d.type === "range") { return true; }
+          else if (d.type === "choice" && d.attributes.allow_multiple === false) { return true; }
+          else { return false; }
+        });
 
 // debugger;
 console.log('Raw questions', questions)
@@ -304,9 +304,23 @@ console.log('-updateGraph -curResponseData', curResponseData)
       .append('text')
       .attr('class', 'axis-label-x')
       .attr('x', width/2)
-      .attr('y', 200)
+      .attr('y', 60)
       .style('text-anchor', 'middle')
       .text(curQuestion1.attributes.slug);
+
+      if (curQuestion1.type === 'choice') {
+        svg.append('g')
+        .attr('class', 'x axis')
+        .attr('transform', 'translate(0,'+ height +')')
+        .call(xAxis)
+        .call(tickModifier)
+        .append('text')
+        .attr('class', 'axis-label-x')
+        .attr('x', width/2)
+        .attr('y', 150)
+        .style('text-anchor', 'middle')
+        .text(curQuestion1.attributes.slug);
+      }
 
       // Draw Y axis
       svg.append('g')
@@ -316,11 +330,26 @@ console.log('-updateGraph -curResponseData', curResponseData)
       .append('text')
       .attr('class', 'axis-label-y')
       .attr('transform', 'rotate(-90)')
-      .attr('x', -width/2)
-      .attr('y', -200)
+      .attr('x', -height/2)
+      .attr('y', -65)
       .attr('dy', '.71em')
-      .style('text-anchor', 'start')
+      .style('text-anchor', 'middle')
       .text(curQuestion2.attributes.slug);
+
+      if (curQuestion2.type === 'choice') {
+        svg.append('g')
+        .attr('class', 'y axis')
+        .call(yAxis)
+        .call(tickModifier)
+        .append('text')
+        .attr('class', 'axis-label-y')
+        .attr('transform', 'rotate(-90)')
+        .attr('x', -height/2)
+        .attr('y', -200)
+        .attr('dy', '.71em')
+        .style('text-anchor', 'middle')
+        .text(curQuestion2.attributes.slug);
+      }
 
       // Modify default appearance of ticks on the axes.
       function tickModifier(iQuestionType) {
@@ -328,15 +357,17 @@ console.log('-updateGraph -curResponseData', curResponseData)
         // Move X ticks away from axis, for numbers and sideways text ticks.
         var xTicks = d3.selectAll('.x .tick').select('text');
         xTicks
-        .attr('x', '0.5rem')
+        .attr('x', '0')
         .attr('y', '2rem')
         .attr('dy', '0rem')
-        .style('text-anchor', 'end');
+        .style('text-anchor', 'middle');
         if (curQuestion1.type === 'choice') {
           xTicks
           .attr('x', '-1rem')
           .attr('y', '1rem')
-          .attr('transform', 'rotate(-45)');
+          .attr('transform', 'rotate(-45)')
+          .style('text-anchor', 'end');
+
         }
 
         // Move Y ticks aways from axis.
@@ -603,17 +634,17 @@ _.forOwn(response, function(responseVal, question){
 
   }
 
-$(function() {
+  $(function() {
 
     var $body = $(document);
     $body.bind('scroll', function() {
         // "Disable" the horizontal scroll.
         if ($body.scrollLeft() !== 0) {
-            $body.scrollLeft(0);
+          $body.scrollLeft(0);
         }
-    });
+      });
 
-});
+  });
 
 </script>
     <!-- Bootstrap core JavaScript
