--- a/tool/index.html
+++ b/tool/index.html
@@ -6,45 +6,45 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
   <script src="https://d3js.org/d3-queue.v3.min.js"></script>
 
-<!--   copied from bootstrap
--->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="../../favicon.ico">
+  <!--   copied from bootstrap -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
 
-<title>Design Census Data Explorer</title>
+  <title>Design Census Data Explorer</title>
 
-<!-- Bootstrap core CSS -->
-<link href="../../dist/css/bootstrap.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="../../dist/css/bootstrap.css" rel="stylesheet">
 
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-<!-- Custom styles for this template -->
-<link href="starter-template.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="starter-template.css" rel="stylesheet">
 
-<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-<script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-      <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-    </head>
+</head>
 
-    <body>
-     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-       <div class="row">
+<body>
+
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="row">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -63,15 +63,16 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-  </div>
-</div>
-</nav>
-<div class="allContent">
-  <div class="container">
-    <div id="error-text">
-      <h1 style="color:#2A2B2C">To access The Design Census Data Explorer, please view this page on a screen that is at least 1024px in width.</h2>
+  </nav>
+
+  <div class="allContent">
+
+    <div class="container">
+      <div id="error-text">
+        <h2 style="color:#2A2B2C">To access The Design Census Data Explorer, please view this page on a screen that is at least 1024px in width.</h2>
       </div>
     </div>
+
     <div class="container">
       <div id="about-text">
         <h2 style="color:#2A2B2C">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
@@ -80,8 +81,6 @@
       <br/><br/>
     </div>
 
-
-
     <div class="container">
       <div id="dropdowns">
         <div class="select-style x" style="float:left">
@@ -89,21 +88,20 @@
             <option selected disabled>Select question for X axis</option>
           </select>
         </div>
-<!--   <div class="x"><h2>×</h2></div>
--->  <div class="select-style y" style="float:left">
-<select id="data-selection-2">
-  <option selected disabled>Select question for Y axis</option>
-</select>
-</div>
-</div>
-</div><!-- /.container -->
+        <!-- <div class="x"><h2>×</h2></div> -->
+        <div class="select-style y" style="float:left">
+          <select id="data-selection-2">
+            <option selected disabled>Select question for Y axis</option>
+          </select>
+        </div>
+      </div>
+    </div><!-- /.container -->
 
-<div class="container">
-  <div id="graph-area"></div>
-</div>
-</div>
+    <div class="container">
+      <div id="graph-area"></div>
+    </div>
 
-
+  </div>
 
 <script>
 
@@ -578,13 +576,15 @@ _.forOwn(response, function(responseVal, question){
   });
 
 </script>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-  </html>
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+  <script src="../../dist/js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
+</body>
+</html>
