--- a/tool/index.html
+++ b/tool/index.html
@@ -33,80 +33,91 @@
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
+    <![endif]-->
 
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-</head>
+  </head>
 
-<body>
+  <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="row">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="https://www.sosolimited.com/" style="float:left"><img class="large" style="max-width:129px;height:auto" src="assets/SOSOlogoVector-red@2x.png"><img class="small" style="max-width:50px;height:auto" src="assets/SOSOlogoVectorShort-red@2x.png"></a>
-          <li style="float:right; border-bottom: 3px solid #2a2b2c; list-style-type: none" class="h4">Design Census Data Explorer</li>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse" style="float:right">
-          <ul class="nav navbar-nav">
-            <li style="border-bottom: 3px solid #FCC006" class="h4"><div id="save-csv"><a download="aiga_data.csv" href="" target="_blank">Save selection to CSV</a></div></li>
-            <li style="border-bottom: 3px solid #3BADE5" class="h4"><div><a href="https://github.com/sosolimited/Design-Census" target="_blank">Download code on GitHub</a></div></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-  </nav>
-
-  <div class="allContent">
-
-    <div class="container">
-      <div id="error-text">
-        <h2 style="color:#2A2B2C">To access The Design Census Data Explorer, please view this page on a screen that is at least 1024px in width.</h2>
-      </div>
-    </div>
-
-    <div class="container">
-      <div id="about-text">
-        <h2 style="color:#2A2B2C">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
-        <h2 style="color:#2A2B2C">This tool was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and the official data visualization partner of the 2016 Design Census.</h2>
-      </div>
-      <br/><br/>
-    </div>
-
-    <div class="container">
-      <div id="dropdowns">
-        <div class="select-style x" style="float:left">
-          <select id="data-selection-1">
-            <option selected disabled>Select question for X axis</option>
-          </select>
-        </div>
-        <!-- <div class="x"><h2>×</h2></div> -->
-        <div class="select-style y" style="float:left">
-          <select id="data-selection-2">
-            <option selected disabled>Select question for Y axis</option>
-          </select>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="row">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="https://www.sosolimited.com/" style="float:left"><img class="large" style="max-width:129px;height:auto" src="assets/SOSOlogoVector-red@2x.png"><img class="small" style="max-width:50px;height:auto" src="assets/SOSOlogoVectorShort-red@2x.png"></a>
+            <li style="float:right; border-bottom: 3px solid #2a2b2c; list-style-type: none" class="h4">Design Census Data Explorer</li>
+          </div>
+          <div id="navbar" class="collapse navbar-collapse" style="float:right">
+            <ul class="nav navbar-nav">
+              <li style="border-bottom: 3px solid #FCC006" class="h4"><div id="save-csv"><a download="aiga_data.csv" href="" target="_blank">Save selection to CSV</a></div></li>
+              <li style="border-bottom: 3px solid #3BADE5" class="h4"><div><a href="https://github.com/sosolimited/Design-Census" target="_blank">Download code on GitHub</a></div></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
       </div>
-    </div><!-- /.container -->
+    </nav>
 
-    <div class="container">
-      <div id="graph-area"></div>
+    <div class="allContent">
+
+      <div class="container">
+        <div id="error-text">
+          <h2 style="color:#2A2B2C">To access The Design Census Data Explorer, please view this page on a screen that is at least 1024px in width.</h2>
+        </div>
+      </div>
+
+      <div class="container">
+        <div id="about-text">
+          <h2 style="color:#2A2B2C">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
+          <h2 style="color:#2A2B2C">This tool was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and the official data visualization partner of the 2016 Design Census.</h2>
+        </div>
+        <br/><br/>
+        <div id="viz-loader">
+        <h2 style="color:#a5a4a0">Loading visualization...</h2>
+        </div>
+      </div>
+
+      <div id="dropdown-viz">
+        <div class="container">
+          <div id="dropdowns">
+            <div class="select-style x" style="float:left">
+              <select id="data-selection-1">
+                <option selected disabled>Select question for X axis</option>
+              </select>
+            </div>
+            <!-- <div class="x"><h2>×</h2></div> -->
+            <div class="select-style y" style="float:left">
+              <select id="data-selection-2">
+                <option selected disabled>Select question for Y axis</option>
+              </select>
+            </div>
+          </div>
+        </div><!-- /.container -->
+
+        <div class="container">
+          <div id="graph-area"></div>
+        </div>
+      </div>
     </div>
 
-  </div>
+    <script>
+      $(document).ready(function(){
+        $('#viz-loader').css('z-index', '-100');
+      })
+      $(document).ready(function(){
+        $('#dropdown-viz').delay(1000).fadeIn(500);
+      })
 
-<script>
 
-  var questions = undefined,
-  responses = undefined,
+      var questions = undefined,
+      responses = undefined,
         // Margins around graph.
         margin = {top: 50, right: 0, bottom: 360, left: 200},
         // Width & height of graph.
@@ -574,6 +585,9 @@ _.forOwn(response, function(responseVal, question){
       });
 
   });
+
+
+
 
 </script>
 
